--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 <body>
     <div class="card">
         <h1>🐾 Рыжий Кот</h1>
-        <img id="cat" src="https://cdn.pixabay.com/photo/2017/11/09/21/41/cat-2934720_1280.jpg" alt="Рыжий кот">
+        <img id="cat" src="ryzhik.png" alt="Рыжий кот">
         <p><strong>Возраст:</strong> 3 года</p>
         <p><strong>Люблю:</strong> мягкий корм, подоконники и вечерние прогулки</p>
         <p><strong>Цель:</strong> познакомиться с очаровательной кошечкой 🐱💘</p>
         <p><strong>Факт из биографии:</strong> ранее судим за разбойный кусь 😼</p>
+        <p><strong>Немного о себе:</strong> к лотку приучен </p>
         <button id="meowBtn">Сказать “Мяу!”</button>
         <p id="message"></p>
     </div>
